# leg

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  Taskfile.yml  go.mod  go.sum  leg.go  leg_test.go  staticcheck.conf
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: log.rs  minimal.rs  readme.go  simple.rs
src/: default_logger.rs  lib.rs  log_support.rs  printer.rs
tests/: lib.rs
