[package]
name = "leg"
version = "0.4.2-alpha.0"
authors = ["Jesús Rubio <jesusprubio@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/leg"
include = ["src/**/*", "Cargo.toml"]

description = "🔈 Elegant logging for CLIs made simple"
repository = "https://github.com/jesusprubio/leg.git"
readme = "README.md"
keywords = [
  "log",
  "logger",
  "print",
  "println",
  "cli"
]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools"
]
license = "MIT"

[package.metadata.commands]
deps = "cargo install cargo-audit && rustup component add rustfmt clippy"
format = "cargo fmt"
postformat = "cargo clippy"
pretest = "cargo cmd format && cargo audit"
test = "cargo test -- --nocapture"
example = "cargo run --example simple"

[badges]
travis-ci = { repository = "jesusprubio/leg" }

[dependencies]
colored = "1.8.0"
