[package]
name = "leg"
version = "1.0.0"
authors = ["Jesús Rubio <jesusprubio@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/leg"
include = ["src/**/*", "Cargo.toml"]

description = "🔈 Elegant print for lazy devs (async-std)"
repository = "https://github.com/jesusprubio/leg.git"
readme = "README.md"
keywords = [
  "log",
  "logger",
  "print",
  "println",
  "cli"
]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools"
]
license = "MIT"

[package.metadata.commands]
deps = "cargo install cargo-audit && rustup component add rustfmt clippy"
format = "cargo fmt"
postformat = "cargo clippy"
pretest = "cargo cmd format && cargo audit"
test = "cargo test -- --nocapture"
example = "cargo run --example simple"

[badges]
travis-ci = { repository = "jesusprubio/leg" }

[dependencies]
colored = "2.0.0"

[dependencies.async-std]
version = "1.8.0"
features = ["unstable", "attributes"]
